--- a/server/package.json
+++ b/server/package.json
@@ -31,8 +31,7 @@
     "node": ">=12.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=my-midway-project --framework=@midwayjs/web",
-    "docker": "egg-scripts start --port=7002 --title=my-midway-project --framework=@midwayjs/web",
+    "start": "egg-scripts start  --port=7002 --daemon --title=my-midway-project --framework=@midwayjs/web",
     "start_build": "npm run build && cross-env NODE_ENV=development midway-bin dev",
     "dev": "cross-env ets && cross-env NODE_ENV=local midway-bin dev --ts",
     "test": "midway-bin test --ts",
