--- a/client/package.json
+++ b/client/package.json
@@ -69,13 +69,18 @@
     "@umijs/fabric": "^2.6.2",
     "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.5.15",
+    "assert": "^2.0.0",
     "babel-plugin-import": "^1.13.3",
+    "body-parser": "^1.20.0",
     "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
+    "glob": "^8.0.3",
     "lint-staged": "^11.1.1",
+    "multer": "^1.4.4-lts.1",
+    "path-to-regexp": "^6.2.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "react": "17.x",
