--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
     "commit": "git-cz",
-    "lint": "eslint  --ext .js,.jsx,.ts,.tsx --fix src"
+    "lint": "eslint  --ext .js,.jsx,.ts,.tsx --fix src",
+    "tsc:mock": "tsc -p ./mocktsconfig.json"
   },
   "config": {
     "commitizen": {
@@ -66,6 +67,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/store": "^2.0.2",
+    "@types/vfile-message": "^2.0.0",
     "@umijs/fabric": "^2.6.2",
     "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.5.15",
