--- a/client/mocktsconfig.json
+++ b/client/mocktsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "commonjs",
+    "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
     "importHelpers": true,
