--- a/client/package.json
+++ b/client/package.json
@@ -67,7 +67,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/store": "^2.0.2",
-    "@types/vfile-message": "^2.0.0",
+    "@types/vfile-message": "1.0.0",
     "@umijs/fabric": "^2.6.2",
     "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.5.15",
