fix: 完善本地开发调试，本地部署等，再次自我验证

--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "demo": "cross-env  UMI_ENV=DEV HMR=none umi dev",
     "dev-ui": "cross-env UMI_UI=1  umi dev",
-    "dev": "cross-env UMI_ENV=dev umi dev",
+    "dev": "cross-env UMI_ENV=dev MOCK=none umi dev",
+    "dev:mock": "cross-env UMI_ENV=mock umi dev",
     "build": "cross-env UMI_ENV=test umi build",
     "dev-analyze": "cross-env UMI_ENV=dev ANALYZE=1 umi dev",
     "build-analyze": "cross-env UMI_ENV=test ANALYZE=1 umi build",
