--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,6 @@ jobs:
       - name: publish
         uses: pennsignals/publish_docker-compose@v0.1.0
         with:
-          version: "0.2.6-rc.1" # optional
+          version: "1.0.0"
           docker_compose: "docker-compose.yml"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
