fix: 删减 命令行，修复vercel的mock问题，midway的vercel暂时不管了

--- a/client/package.json
+++ b/client/package.json
@@ -2,14 +2,13 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "demo": "cross-env  UMI_ENV=DEV HMR=none umi dev",
-    "dev-ui": "cross-env UMI_UI=1  umi dev",
-    "dev": "cross-env UMI_ENV=dev MOCK=none umi dev",
-    "dev:mock": "cross-env UMI_ENV=mock umi dev",
+    "dev:proxy": "cross-env UMI_ENV=DEV UMI_UI=none MOCK=none umi dev",
+    "dev": "cross-env PORT=$PORT UMI_UI=none MOCK=none umi dev",
+    "dev:mock": "umi dev",
     "build": "cross-env UMI_ENV=test umi build",
-    "build:github": "cross-env UMI_ENV=github umi build",
-    "dev-analyze": "cross-env UMI_ENV=dev ANALYZE=1 umi dev",
-    "build-analyze": "cross-env UMI_ENV=test ANALYZE=1 umi build",
+    "build:github": "umi build",
+    "dev:analyze": "cross-env UMI_ENV=dev ANALYZE=1 umi dev",
+    "build:analyze": "cross-env UMI_ENV=test ANALYZE=1 umi build",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write **/*.{js,jsx,tsx,ts,less,md,json}",
     "test": "umi-test",
@@ -73,6 +72,7 @@
     "@umijs/fabric": "^2.6.2",
     "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.5.15",
+    "@vercel/node": "^1.15.3",
     "assert": "^2.0.0",
     "babel-plugin-import": "^1.13.3",
     "body-parser": "^1.20.0",
