--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "cross-env PORT=$PORT UMI_UI=none MOCK=none umi dev",
     "dev:mock": "umi dev",
     "build": "umi build",
-    "vercel-build": "node ./build.js",
+    "tsc:mock": "tsc -p ./mocktsconfig.json",
+    "build:vercel": "yarn tsc:mock && cross-env COPY=1 umi build",
     "dev:analyze": "cross-env UMI_ENV=dev ANALYZE=1 umi dev",
     "build:analyze": "cross-env UMI_ENV=test ANALYZE=1 umi build",
     "postinstall": "umi generate tmp",
