fix: 包含运行时文件mock

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -4,5 +4,10 @@
       "source": "/api/(.*)",
       "destination": "/api/mock"
     }
-  ]
+  ],
+  "functions": {
+    "api/mock.ts": {
+      "includeFiles": "mock/**"
+    }
+  }
 }
