--- a/client/package.json
+++ b/client/package.json
@@ -55,7 +55,8 @@
     "react-monaco-editor": "^0.44.0",
     "react-sortable-hoc": "^2.0.0",
     "store": "^2.0.12",
-    "umi": "^3.5.15"
+    "umi": "^3.5.15",
+    "fs-extra": "^10.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
@@ -78,7 +79,6 @@
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "express": "^4.17.1",
-    "fs-extra": "^10.0.0",
     "glob": "^8.0.3",
     "lint-staged": "^11.1.1",
     "multer": "^1.4.4-lts.1",
