--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "./bootstrap.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
