--- a/server/package.json
+++ b/server/package.json
@@ -4,28 +4,31 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@midwayjs/bootstrap": "^2.3.0",
-    "@midwayjs/core": "^2.3.0",
-    "@midwayjs/decorator": "^2.3.0",
-    "@midwayjs/web": "^2.3.0",
+    "@midwayjs/bootstrap": "^3.0.0",
+    "@midwayjs/core": "^3.0.0",
+    "@midwayjs/decorator": "^3.0.0",
+    "@midwayjs/web": "^3.0.0",
     "egg": "^2.0.0",
     "egg-scripts": "^2.10.0",
     "fs-extra": "^10.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "pm2": "^5.2.0"
   },
   "devDependencies": {
-    "@midwayjs/cli": "^1.2.79",
+    "@midwayjs/cli": "^1.3.5",
     "@midwayjs/egg-ts-helper": "^1.2.0",
     "@midwayjs/luckyeye": "^1.0.2",
-    "@midwayjs/mock": "^2.12.3",
+    "@midwayjs/mock": "^3.0.0",
     "@types/fs-extra": "^9.0.12",
     "@types/jest": "^27.0.1",
     "@types/node": "14",
     "@vercel/node": "^1.15.3",
     "cross-env": "^7.0.3",
+    "egg-mock": "^4.2.0",
     "jest": "^27.0.6",
     "mwts": "^1.2.2",
     "ts-jest": "^27.0.4",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
   "engines": {
