--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,14 @@
     "dev": "cross-env PORT=$PORT UMI_UI=none MOCK=none umi dev",
     "dev:mock": "umi dev",
     "build": "umi build",
-    "tsc:mock": "tsc -p ./mocktsconfig.json",
-    "dev:analyze": "cross-env UMI_ENV=dev ANALYZE=1 umi dev",
-    "build:analyze": "cross-env UMI_ENV=test ANALYZE=1 umi build",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write **/*.{js,jsx,tsx,ts,less,md,json}",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
     "commit": "git-cz",
-    "lint": "eslint  --ext .js,.jsx,.ts,.tsx --fix src"
+    "lint": "eslint  --ext .js,.jsx,.ts,.tsx --fix src",
+    "build:aliyun": "cross-env UMI_ENV=aliyun umi build",
+    "deploy": "npm run build:aliyun && midway-bin deploy --skipBuild"
   },
   "config": {
     "commitizen": {
@@ -47,6 +46,7 @@
     "expr-eval": "^2.0.2",
     "form-render": "^1.6.1",
     "fr-generator": "^2.5.4",
+    "fs-extra": "^10.0.0",
     "json-parse-better-errors": "^1.0.2",
     "lodash-es": "^4.17.21",
     "monaco-editor-webpack-plugin": "^4.1.1",
@@ -55,12 +55,12 @@
     "react-monaco-editor": "^0.44.0",
     "react-sortable-hoc": "^2.0.0",
     "store": "^2.0.12",
-    "umi": "^3.5.15",
-    "fs-extra": "^10.0.0"
+    "umi": "^3.5.15"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@midwayjs/cli": "^1.3.5",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.12",
     "@types/json-parse-better-errors": "^1.0.0",
@@ -74,20 +74,20 @@
     "@umijs/test": "^3.5.15",
     "@vercel/node": "^1.15.3",
     "babel-plugin-import": "^1.13.3",
-    "body-parser": "^1.20.0",
     "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "express": "^4.17.1",
-    "glob": "^8.0.3",
     "lint-staged": "^11.1.1",
-    "multer": "^1.4.4-lts.1",
-    "path-to-regexp": "^6.2.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "react": "17.x",
     "react-dom": "17.x",
     "typescript": "^4.3.5",
     "yorkie": "^2.0.0"
+  },
+  "optionalDependencies": {
+    "@midwayjs/cli-plugin-faas": "^1.3.5",
+    "@midwayjs/fcli-plugin-fc": "^1.3.5"
   }
 }
