--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,13 @@
   "dependencies": {
     "@midwayjs/bootstrap": "^3.0.0",
     "@midwayjs/core": "^3.0.0",
+    "@midwayjs/cross-domain": "^3.3.11",
     "@midwayjs/decorator": "^3.0.0",
     "@midwayjs/web": "^3.0.0",
     "egg": "^2.0.0",
     "egg-scripts": "^2.10.0",
     "fs-extra": "^10.0.0",
-    "lodash": "^4.17.21",
-    "pm2": "^5.2.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@midwayjs/cli": "^1.3.5",
@@ -45,10 +45,9 @@
     "lint": "mwts check",
     "lint:fix": "mwts fix",
     "ci": "npm run cov",
-    "build:midway": "midway-bin build -c",
-    "dev:vercel": "node index.js",
-    "build": "yarn build:midway && node ./index.js",
-    "check": "luckyeye"
+    "build": "midway-bin build -c",
+    "check": "luckyeye",
+    "deploy": "midway-bin deploy"
   },
   "midway-bin-clean": [
     ".vscode/.tsbuildinfo",
@@ -64,5 +63,17 @@
     "url": ""
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "midway-integration": {
+    "lifecycle": {
+      "before:package:cleanup": "npm run build"
+    }
+  },
+  "egg": {
+    "framework": "@midwayjs/web"
+  },
+  "optionalDependencies": {
+    "@midwayjs/cli-plugin-faas": "^1.3.5",
+    "@midwayjs/fcli-plugin-fc": "^1.3.5"
+  }
 }
