--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,7 @@
     "test:coverage": "umi-test --coverage",
     "commit": "git-cz",
     "lint": "eslint  --ext .js,.jsx,.ts,.tsx --fix src",
-    "build:aliyun": "cross-env UMI_ENV=aliyun umi build",
-    "deploy": "npm run build:aliyun && midway-bin deploy --skipBuild"
+    "build:aliyun": "cross-env UMI_ENV=aliyun umi build"
   },
   "config": {
     "commitizen": {
@@ -60,7 +59,6 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@midwayjs/cli": "^1.3.5",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.12",
     "@types/json-parse-better-errors": "^1.0.0",
@@ -85,9 +83,5 @@
     "react-dom": "17.x",
     "typescript": "^4.3.5",
     "yorkie": "^2.0.0"
-  },
-  "optionalDependencies": {
-    "@midwayjs/cli-plugin-faas": "^1.3.5",
-    "@midwayjs/fcli-plugin-fc": "^1.3.5"
   }
 }
