--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "node": ">=12.0.0"
   },
   "scripts": {
+    "start:txy": "yarn build && yarn start",
     "start": "egg-scripts start --daemon --title=my-midway-project --framework=@midwayjs/web",
     "docker": "egg-scripts start  --title=my-midway-project-docker --framework=@midwayjs/web",
     "stop": "egg-scripts stop  --title=my-midway-project",
